exemplos/deployment_with_resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-container
        image: nginx:latest
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: "75Mi"
            cpu: "20m"
          limits:
            memory: "75Mi"
            cpu: "200m"
