exemplos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-pvillaverde.pvillaverde.ackstorm.io
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nginx-pvillaverde.pvillaverde.ackstorm.io
      secretName: nginx-pvillaverde-tls
  rules:
  - host: nginx-pvillaverde.pvillaverde.ackstorm.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
